--- a/hugo.yaml
+++ b/hugo.yaml
@@ -8,7 +8,7 @@ on:
       - master
 
   # 允许您手动从“Actions”标签运行此工作流程
-  workflow_dispatch:
+  workflow_dispatch: true
 
 # 设置GITHUB_TOKEN的权限，以允许部署到GitHub Pages
 permissions:
